@@ -5,19 +5,20 @@ import com.culturefinder.songdodongnae.delicious_spot.dto.DeliciousSpotReqDto;
 import com.culturefinder.songdodongnae.delicious_spot.dto.DeliciousSpotResponseDto;
 import com.culturefinder.songdodongnae.delicious_spot.repository.DeliciousSpotRepository;
 import com.culturefinder.songdodongnae.utils.CustomPage;
+import com.culturefinder.songdodongnae.s3.S3UploadService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
 @RequiredArgsConstructor
 public class DeliciousSpotService {
 
-    public final DeliciousSpotRepository deliciousSpotRepository;
+    private final DeliciousSpotRepository deliciousSpotRepository;
+    private final S3UploadService s3UploadService;
 
     public DeliciousSpotResponseDto createDeliciousSpot(DeliciousSpotReqDto deliciousSpotReqDto) {
         DeliciousSpot deliciousSpot = deliciousSpotReqDto.toEntity();
@@ -26,21 +27,32 @@ public class DeliciousSpotService {
     }
 
     public DeliciousSpotResponseDto getDeliciousSpotById(Long id) {
-        return DeliciousSpotResponseDto.fromEntity(deliciousSpotRepository.findDeliciousSpotById(id));
+        DeliciousSpot deliciousSpot = deliciousSpotRepository.findDeliciousSpotById(id);
+        return DeliciousSpotResponseDto.fromEntity(deliciousSpot);
     }
 
     public DeliciousSpotResponseDto updateDeliciousSpot(Long id, DeliciousSpotReqDto deliciousSpotReqDto) {
-        return DeliciousSpotResponseDto.fromEntity(deliciousSpotRepository.updateDeliciousSpot(id, deliciousSpotReqDto.toEntity()));
+        DeliciousSpot updatedDeliciousSpot = deliciousSpotRepository.updateDeliciousSpot(id, deliciousSpotReqDto.toEntity());
+        return DeliciousSpotResponseDto.fromEntity(updatedDeliciousSpot);
     }
 
     public void deleteDeliciousSpot(Long id) {
+        DeliciousSpot deliciousSpot = deliciousSpotRepository.findDeliciousSpotById(id);
+        if (deliciousSpot.getThumbnailImageUrl() != null) {
+            s3UploadService.deleteFile(deliciousSpot.getThumbnailImageUrl());
+        }
+        if (deliciousSpot.getImageUrls() != null) {
+            for (String imageUrl : deliciousSpot.getImageUrls()) {
+                s3UploadService.deleteFile(imageUrl);
+            }
+        }
         deliciousSpotRepository.deleteDeliciousSpot(id);
     }
 
     public List<DeliciousSpotResponseDto> getAllDeliciousSpots() {
         return deliciousSpotRepository.findAll().stream()
                 .map(DeliciousSpotResponseDto::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public CustomPage<DeliciousSpotResponseDto> getAllDeliciousSpots(int currentPage, int pageSize) {
